# OS_lab3

./: Readme.md
thread_synchronization/: CMakeLists.txt  Makefile
thread_synchronization/src/: array_manager.cpp  array_manager.h  main.cpp  marker_thread.h  sync_primitives.cpp  sync_primitives.h  thread_manager.cpp  thread_manager.h  utils.h
thread_synchronization/test/: CMakeLists.txt  mock_array.h  mock_thread.h  unit_tests.cpp
